pywbem-0.8.0~dev (last updated: 2014-10-11, includes commits up to r673)

  ENHANCEMENTS:

    * Verify certificates against platform provided CA trust store in
      /etc/pki/tls/certs. Linux only.  (Peter Hatina)

    * Added '-d' option to MOF compiler that causes the compiler to perform a
      dry-run and just check the MOF file syntax. This allows to more easily
      detect included MOF files when used together with the '-v' option.
      (Jan Safranek)

    * Added support for non-ASCII (Unicode) characters.  (Michal Minar, Andreas
      Maier)
      
    * Improved information in the message text of some exceptions (TypeError
      and KeyError in cim_obj.py, ValueError in cim_obj.py, and ParseError in
      tupleparse.py).  (Andreas Maier)

    * Moved the definition of the pywbem version from setup.py to __init__.py,
      in order to make it available to programs using pywbem as
      pywbem.__version__.  (Andreas Maier)

    * Added support for direct iteration over NocaseDict objects using 'for'
      and 'in' by adding __iter__(), e.g. for use with CIMInstance.properties.
      (Andreas Maier)

    * Added more instance attributes to be shown in repr() on CIMProperty and
      other classes in cim_obj.  (Andreas Maier)

    * Added and improved docstring-based documentation in the pywbem modules
      cim_operations, cim_http, cim_obj, cim_types, and the pywbem module.
      (Andreas Maier)

    * Improved the way missing file:// URL support on Windows is handled, by
      now issuing a proper error message instead of stumbling across the
      missing socket.AF_UNIX constant.  (Andreas Maier)

    * Improved the way missing OWLocal authorization with the OpenWBEM server
      is handled on Windows, by now issuing a proper error message instead of
      stumbling across the missing os.getuid() function.  (Andreas Maier)
      
    * Improved Windows portability by no longer attempting to import 'pwd' in